# VAM

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
configs/: dnb.example.yaml  infer.example.yaml  train.example.yaml
examples/synthetic/: generate.py
src/vam/: __init__.py  checkpoint.py  cli.py  inference.py  model.py  training.py
src/vam/dnb/: __init__.py  aggregate.py  cli.py  reference.py  score.py  ssn.py
src/vam/embeddings/: __init__.py  esm2.py  scgpt.py
tests/: test_alignment.py  test_dnb.py  test_model.py  test_train_infer.py
